2004-03-18  Erik Huelsmann  <ehuelsmann@common-lisp.net>

	* protocol.lisp: Add defgenerics. Remove duplicates 
	from *reply-names* before passing to create-irc-message-classes.

	* command.lisp, event.lisp: Add defgenerics.

	* protocol.lisp (remove-channel): Change order of arguments
	to (remove-channel <user-object> <channel-object>)

	* package.lisp (export): Export symbols needed for manipulation
	of the different objects 

2004-03-08:
	Started tracking changes committed to the repository in this log.

	Ordering of events in this file is last-commited-at-top.